--- a/docs/releases/26100.md
+++ b/docs/releases/26100.md
@@ -1,6 +1,6 @@
 ## 2023.4.11 Magisk v26.1
 
-### Changes from v26.0
+### Cambios desde v26.0
 
 - [App] Fix crashing when revoking root permissions
 - [MagiskInit] Always prefer `ext4` partitions over `f2fs` when selecting the pre-init partition
